force-app/main/default/objects/Vote_User_Story__c/Vote_User_Story__c.object-meta.xml
<CustomObject>
    <label>Vote User Story</label>
    <nameField>
        <displayFormat>Vote-{0000}</displayFormat>
        <label>Vote User Story Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Vote User Story</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>