force-app/main/default/objects/Vote_User_Story__c/fields/User_Story_Option__c.field-meta.xml
<CustomField>
    <fullName>User_Story_Option__c</fullName>
    <label>User Story Option</label>
    <referenceTo>User_Story_Options__c</referenceTo>
    <relationshipLabel>Vote User Story</relationshipLabel>
    <relationshipName>Vote_User_Story</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>