force-app/main/default/objects/Vote_User_Story__c/fields/Vote__c.field-meta.xml
<CustomField>
    <fullName>Vote__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Vote</label>
    <type>Checkbox</type>
</CustomField>